calico-cloud_versioned_docs/version-18/get-started/connect/install-cluster.mdx
---
description: Steps to connect your cluster to Calico Cloud.
---

import variables from '@site/calico-cloud_versioned_docs/version-18/variables';

# Connect a cluster to Calico Cloud

## Before you begin

Connecting to {variables.prodname} is easy, and is done in **Manager UI**, **Managed Clusters** using an installation wizard.

Although not required, it may save you troubleshooting if you verify your cluster meets [system requirements](requirements/system-requirements.mdx).

## Install options

{variables.prodname} provides the following install options. Note that after initial installation, you cannot reinstall the cluster with a different option.

- Default (kubectl)
- Private image registry using Helm charts
- Helm charts

Choose your install option and follow the steps.

## Default

**Required:** `kubectl` access to the cluster

1. On the **Managed Clusters** page, click **Connect Cluster**.
1. Add the **Cluster Name**, and select the **Cluster Type**.
1. (Optional) If you must install a specific older release, select the {variables.prodname} version you want to install. We always recommend the latest version, which is installed by default.
1. Click **Connect** and follow the wizard.
1. Monitor the progress on the Managed Clusters page.

## Private registry

**Required**:

- Helm v3
- Before you start the installation wizard, add {variables.prodname} images to a [private registry](setup-private-registry.mdx). You'll need the following values in the installation wizard:

  - **Registry Secret Name**
    :::note

    If your private registry requires credentials, create the **calico-cloud** namespace on your cluster. Then, create an image pull secret and use this name for the **Registry Secret Name**.

    :::

  - **Image Registry**
  - **Image Path**

1. On the **Managed Clusters** page, click **Connect Cluster**.
1. Add the **Cluster Name**, and select the **Cluster Type**.
1. (Optional) If you must install a specific older release, select the {variables.prodname} version you want to install. We always recommend the latest version, which is installed by default.
1. Click **Advanced Options**, and select both **Install via helm** and **Install private registry**. (Private registry supports only Helm).

   ![private-registry](/img/calico-cloud/private-registry.png)
1. Complete the fields, ensuring that your inputs match the values used when setting up your private registry.
1. Click **Connect** and follow the wizard.
1. Monitor the progress on the Managed Clusters page.

## Helm

**Required**: Helm v3

1. On the **Managed Clusters** page, click **Connect Cluster**.
1. Add the **Cluster Name**, and select the **Cluster Type**.
1. Select the version of {variables.prodname} you want to install
1. Click **Advanced Options**, and select **Install via helm**.

   ![helm](/img/calico-cloud/helm.png)
1. Click **Connect** and follow the wizard.
1. Monitor the progress on the Managed Clusters page.

## Need help?

See [Troubleshooting checklist](checklist.mdx) and [Tigera operator troubleshooting checklist](operator-checklist.mdx).
